[package]
name = "jtee_engine"
version = "0.1.0"
authors = ["Wenfeng Wang"]
edition = "2021"
repository = "https://github.com/tolak/jtee"

[dependencies]
hex-literal = "0.4.1"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ink = { version = "4", default-features = false }
ink_env = { version = "4", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"], optional = true }

pink = { version = "0.4", default-features = false }
pink-web3 = { version = "0.22.0", default-features = false, features = ["pink", "signing"]}
phat_js = { version = "0.3.0", default-features = false }
pink-json = { version = "0.4", default-features = false }
pink-extension = { version = "0.5.1", default-features = false }

[dev-dependencies]
env_logger = "0.10.0"
hex-literal = "0.4.1"
dotenv = "0.15.0"
hex = "0.4.3"
pink-extension-runtime = "0.5.1"
drink = "0.8.0"
pink-drink = "0.1.1"

[profile.release]
overflow-checks = false     # Disable integer overflow checks.
lto = false                 # Enable full link-time optimization.

[lib]
name = "jtee_engine"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-web3/std",
    "pink-json/std",
    "pink/std",
    "phat_js/std",
]
ink-as-dependency = []

# [patch.crates-io]
# ink = { git = "https://github.com/kvinwang/ink", branch = "v430-big-buffer" }
